--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,12 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .home .logo_container #logo_back {display:block;float: left;position: absolute; z-index: 8; background: url("../img/layer1.svg") no-repeat 10px 10px/30%;top: 80px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 1s;   -webkit-animation-duration: 1s;   animation-duration: 1s;}
 .home .logo_container #logo_mid {display:block;float: left;position: absolute; z-index: 9; background: url("../img/layer2.svg") no-repeat 10px 10px/30%;top: 80px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 2s;   -webkit-animation-duration: 2s;   animation-duration: 2s;}
 .home .logo_container #logo_front {display:block;float: left;position: absolute; z-index: 10; background: url("../img/layer3.svg") no-repeat 10px 10px/30%;top: 80px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 3s;  -webkit-animation-duration: 3s;   animation-duration: 3s;}
+
+img.dfrost-logo {
+  width: 300px;
+  height: 300px;
+}
+
 /*.home #calendar {background: url("../img/icons/calendar.svg") no-repeat}
 .home #venue {background: url("../img/icons/location.svg") no-repeat}
 .home #schedule {background: url("../img/icons/schedule.svg") no-repeat}*/
@@ -540,7 +546,7 @@ body a:hover{text-decoration: none;}
 
 }*/
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1280px) {
   .day2-cutout-img {
     left: -240px;
   }
