--- a/css/style.css
+++ b/css/style.css
@@ -175,8 +175,35 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .home .options a div, .home .options a span{display: block;float: left;width: 100%;height: auto;}
 .home .options a span{margin-top: 20px;}
 
+/* Timer CSS*/
+#clockdiv{
+  font-family: sans-serif;
+  color: #fff;
+  display: inline-block;
+  font-weight: 100;
+  text-align: center;
+  font-size: 30px;
+}
 
+#clockdiv > div{
+  padding: 10px;
+  border-radius: 3px;
+  background: #00BF96;
+  display: inline-block;
+}
 
+#clockdiv div > span{
+  padding: 15px;
+  border-radius: 3px;
+  background: #00816A;
+  display: inline-block;
+}
+
+.smalltext{
+  padding-top: 5px;
+  font-size: 16px;
+}
+/*Timer CSS ends*/
 
 .content_wrapper .section_body{display: block;float: left;width: 100%;}
 
