--- a/css/style.css
+++ b/css/style.css
@@ -434,12 +434,16 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 /*.content_wrapper .speakers .section_icon{display: block;float: left;width: 15%;height: auto;}
 .content_wrapper .speakers .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/
 
-.content_wrapper .dlabs{display: block;width: 100%;overflow: hidden;height: 1000px;background:url(../img/Final_backgrounds/4k-solid.jpg) no-repeat center top/100%;
+.content_wrapper .dlabs{display: block;width: 100%;overflow: hidden;height: 1080px;background:url(../img/Final_backgrounds/4k-solid.jpg) no-repeat center top/100%;
   background-size: cover;position: relative;}
 .dlabs .dlabs_cutout_img{position: absolute;right: -1px;height: 1000px;top: 0;}
 .dlabs .dlabs_cnt {display: block;float: left;width: 80%;padding:100px;}
-.dlabs .dlabs_cnt .day1{background:url(../img/Final_backgrounds/Workshop-Holder.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
-.dlabs .dlabs_cnt .day2{background:url(../img/Final_backgrounds/Workshop-Holder2.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
+.dlabs .dlabs_cnt .day11{background:url(../img/Workshop-Bamboo.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
+.dlabs .dlabs_cnt .day12{background:url(../img/Workshop-Visual Art.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
+.dlabs .dlabs_cnt .day13{background:url(../img/Workshop-Mapbox.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
+.dlabs .dlabs_cnt .day21{background:url(../img/Workshop-Design Sprint-01.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
+.dlabs .dlabs_cnt .day22{background:url(../img/Workshop-Biomimicry-01.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
+.dlabs .dlabs_cnt .day23{background:url(../img/Workshop-Paper.svg) no-repeat center top/100%;width: 550px;height: 165px; padding: 35px 10px 10px 160px;}
 .dlabs .dlabs_cnt .day1 h3{color: #00FFE2;margin-bottom: 10px;}
 .dlabs .dlabs_cnt .day2 h3{color: #982cff;margin-bottom: 10px;}
 .dlabs .dlabs_cnt .day2 p{color: #999;}
