--- a/css/style.css
+++ b/css/style.css
@@ -134,9 +134,10 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .home .options .date a i, .home .options .venue a i, .home .options .schedule a i{font-size: 4em;width: 100%;margin-bottom: 25px;color: #982cff;}
 .home .options .date a span, .home .options .venue a span, .home .options .schedule a span{width: 100%;text-align: center;font-size: 1.3em;font-family: 'Roboto';}
 */
-/*#date, #venue{
-  color: #982cff;
-}*/
+#date, #venue{
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif; font-weight: 700;
+}
   #home .shadow-overlay {position: absolute;top: 0;left: 0;width: 100%;height: 100%;opacity: .9;
   background: -moz-linear-gradient(left, black 0%, black 20%, transparent 100%);  /* FF3.6-15 */
   background: -webkit-linear-gradient(left, black 0%, black 20%, transparent 100%);  /* Chrome10-25,Safari5.1-6 */
@@ -193,28 +194,34 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
   font-family: sans-serif;
   color: #fff;
   display: inline-block;
-  font-weight: 100;
+  font-weight: 70;
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 #clockdiv > div{
-  padding: 10px;
   border-radius: 3px;
-  background: #00BF96;
   display: inline-block;
+  margin: 5px;
 }
 
 #clockdiv div > span{
-  padding: 15px;
+  padding: 2px;
   border-radius: 3px;
-  background: #00816A;
+  border-bottom: 3px solid #6920b1;
   display: inline-block;
+  color: #17ffdd;
+}
+
+.ticket_sale{
+   padding-top: 20px;
+  font-size: 16px;
 }
 
 .smalltext{
   padding-top: 5px;
-  font-size: 16px;
+  font-size: 10px;
+  color: #17ffdd;
 }
 /*Timer CSS ends*/
 
