parallax effect added back, can make static for mobile
parallax effect added back

--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
   display: block;
   margin: 0 auto;
   z-index: 1000;
+  position: center;
 }
 
 /*.home #calendar {background: url("../img/icons/calendar.svg") no-repeat}
