--- a/css/style.css
+++ b/css/style.css
@@ -708,16 +708,17 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 }
 
 /*******Partners CSS Begins******/
-.content_wrapper .partners{display: block;float: left;width: 100%;height: 600px;background: url(../img/Final_backgrounds/images/bg_08.jpg) no-repeat center top/100%;background-size: 100% auto;background-size: cover;}
+.content_wrapper .partners{display: block;float: left;width: 100%;height: auto;background: url(../img/Final_backgrounds/images/bg_08.jpg) no-repeat center top/100%;background-size: 100% auto;background-size: cover;}
 .content_wrapper .partners h2 {font-size: 3em;color: #141414;width: 100%;margin-bottom: 30px;font-family: 'Gotham';}
 .content_wrapper .partners .partner_cnt{display: block;float: left;/*width: 50%;*/padding: 100px;}
-.content_wrapper .partners .partner_pics{padding: 100px 0 50px 300px; display: inline-block;}
-.content_wrapper .partners .partner_cnt img {height: 100px; padding: 20px;}
+.content_wrapper .partners .partner_pics{/*padding: 100px 0 50px 300px;*/ display: inline-block;}
+.content_wrapper .partners .partner_cnt img {height: 100px; padding: 15px;
+}
 
 /*******Extras CSS Begins******/
 .content_wrapper .extras h2 {font-size: 3em;color: #fff;width: 100%;margin-bottom: 30px;font-family: 'Gotham';position: relative;z-index: 20;}
 
-.content_wrapper .extras{display: block;width: 100%;overflow: hidden;height: 1000px;background:url(../img/Final_backgrounds/BG-Extras.jpg) no-repeat center top/100%;
+.content_wrapper .extras{display: block;width: 100%;overflow: hidden;/*height: 1000px;*/background:url(../img/Final_backgrounds/BG-Extras.jpg) no-repeat center top/100%;
   background-size: cover;position: relative;}
 .extras .extras_cutout_img{position: absolute;left: 0;height: 500px;}
 .extras .extras_heading{display: block;float: left;width: 20%;padding:70px 100px;}
