--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 .open {position: fixed;top: 12px;right: 40px;width: 50px;height: 50px;display: block;cursor: pointer;z-index: 20;-webkit-transition: opacity 0.2s linear;transition: opacity 0.2s linear;}
 .open:hover {opacity: 0.8;}
-.open span {display: block;float: left;clear: both;height: 2px;width: 30px;border-radius: 40px;background-color: #fff;position: absolute;right: -5px;top: 3px;z-index: 19;overflow: hidden;-webkit-transition: all 0.4s ease;transition: all 0.4s ease;}
+.open span {display: block;float: left;clear: both;height: 3px;width: 30px;border-radius: 40px;background-color: #fff;position: absolute;right: -5px;top: 3px;z-index: 19;overflow: hidden;-webkit-transition: all 0.4s ease;transition: all 0.4s ease;}
 .open span:nth-child(1) {margin-top: 10px;z-index: 19;}
 .open span:nth-child(2) {margin-top: 20px;z-index: 19;}
 .open span:nth-child(3) {margin-top: 30px;z-index: 19;}
@@ -72,7 +72,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .sub-menu li a {color: #fff;font-family: 'Roboto';font-size: 1.2em;width: 100%;display: block;float: left;line-height: 55px;}
 .oppenned .sub-menu {opacity: 1;height: 1000px;width: 600px;}
 .oppenned span:nth-child(2) {overflow: visible;}
-.oppenned span:nth-child(1), .oppenned span:nth-child(3) {z-index: 100;-webkit-transform: rotate(45deg);transform: rotate(45deg);}
+.oppenned span:nth-child(1), .oppenned span:nth-child(3) {z-index: 100;-webkit-transform: rotate(45deg);transform: rotate(45deg); height: 5px;}
 .oppenned span:nth-child(1) {-webkit-transform: rotate(45deg) translateY(12px) translateX(12px);transform: rotate(45deg) translateY(12px) translateX(12px);}
 .oppenned span:nth-child(2) {height: 1000px;width: 580px;right: -400px;top: -170px;border-radius: 2%; transform:rotate(-15deg); background-color: rgba(152, 44, 255, 1);}
 .oppenned span:nth-child(3) {-webkit-transform: rotate(-45deg) translateY(-10px) translateX(10px);transform: rotate(-45deg) translateY(-3px) translateX(2px);}
@@ -119,6 +119,10 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 }
 #menu a:hover{
     color: #17ffdd;
+}
+
+.hidden {
+  display: none;
 }
 /*Fixed menu CSS ends here*/
 
